<resources>
    <string name="app_name">Elink</string>
    <string name="bienvenido_a_elink">Bienvenido a Elink</string>
    <string name="disfruta_de_una_nueva_forma_de_divulgar_y_apoyar_proyectos">Disfruta de una nueva forma de divulgar y apoyar proyectos.</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvidaste_tu">¿Olvidaste tu</string>
    <string name="contrase_a_ques">contraseña?</string>
    <string name="ingresa_tu_cuenta_para_seguir_mejorando_al_mundo">Ingresa tu cuenta para seguir mejorando al mundo</string>
    <string name="hola_de_nuevo">¡Hola de nuevo!</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="desc">desc</string>
    <string name="o_ingresa_usando">O ingresa usando</string>
    <string name="contrase_a">Contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="o_crea_una_cuenta_usando">O crea una cuenta usando</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="crea_tu_cuenta_para_poder_ayudar_a_ayudar_a_transformar_el_mundo">Crea tu cuenta para poder ayudar a ayudar a transformar el mundo.</string>
    <string name="creado_con_en_m_xico">Creado con ❤ en México️</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elige_un_tipo_de_usuario">Elige un tipo de usuario</string>
    <string name="sheepy">Sheepy</string>
    <string name="sharky">Sharky</string>
    <string name="continuar">Continuar</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="haremos_que_el_crear_y_mejorar_al_mundo_sea_una_experiencia_nica_cu_ntanos_de_tu_proyecto">Haremos que el crear y mejorar al mundo, sea una experiencia única. Cuéntanos de tu proyecto.</string>
    <string name="nombre_del_proyecto">Nombre del proyecto</string>
    <string name="objetivo_del_proyecto">Objetivo del proyecto</string>
    <string name="meta_monetaria_en_usd">Meta monetaria (en USD)</string>
    <string name="categor_a">Categoría</string>
    <string name="zona_de_impacto">Zona de impacto</string>
    <string name="categor_as_de_inter_s">Categorías de interés</string>
    <string name="detalles">Detalles</string>
    <string name="ambiental">Ambiental</string>
    <string name="tecnolog_a">Tecnología</string>
    <string name="social">Social</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="estilo_de_vida">Estilo de vida</string>
    <string name="agrega_un_m_todo_de_pago_opcional">Agrega un método de pago (opcional)</string>
    <string name="paypal">PayPal</string>
    <string name="banco">banco</string>
    <string name="cu_ntanos_sobre_ti">¡Cuéntanos sobre ti!</string>
    <string name="para_darte_la_experiencia_que_mereces_necesitamos_saber_m_s_de_ti">Para darte la experiencia que mereces, necesitamos saber más de ti.</string>
    <string name="te_enviaremos_un_correo_para_que_puedas_reestablecer_tu_contrase_a">Te enviaremos un correo para que puedas reestablecer tu contraseña.</string>

    <string name="crea_un_post">Crea un post</string>
    <string name="agrega_una_imagen">Agrega una imagen</string>
    <string name="qu_es_lo_que_quieres_decir">¿Qué es lo que quieres decir?</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="tu_impacto">Tu impacto</string>
    <string name="gracias_a_tus_contribuciones_estos_proyectos_est_n_monetariamente_completos_al">Gracias a tus contribuciones estos proyectos están monetariamente completos al</string>
    <string name="nombre">Nombre</string>
    <string name="rank_de_usuario">Rank de usuario</string>
    <string name="correo">Correo</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cambiar_correo_electr_nico">Cambiar correo electrónico</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="salir">Salir</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="mensajes">Mensajes</string>
    <string name="perfil">Perfil</string>
    <string name="restablece_tu_contrase_a">Restablece tu contraseña</string>
    <string name="escribe_tu_correo_electr_nico">Escribe tu correo electrónico</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="publicar">Publicar</string>
    <string name="tipo_de_post">Tipo de post</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="compartir">Compartir</string>
    <string name="like">Like</string>
    <string name="donar">Donar</string>
    <string name="los_proyectos_al_d_a">Los proyectos al día</string>
    <string name="busca_un_post_por_tipo_usuario_o_proyecto">Busca un post por tipo, usuario o proyecto</string>
    <string name="usertype">UserType</string>
    <string name="personas_que_sigues">Personas que sigues</string>
    <string name="seguidores">Seguidores</string>
    <string name="busca_por_nombre_tipo_de_usuario_o_correo">Busca por nombre, tipo de usuario o correo</string>
    <string name="status_project">status/project</string>
    <string name="editar_post">Editar post</string>
    <string name="tus_posts">Tus posts</string>
    <string name="busca_post_por_tipo_de_post_o_proyecto">Busca post por tipo de post o proyecto</string>
    <string name="sus_posts">Sus posts</string>

    <string-array name="categorias">
        <item>Ambiental</item>
        <item>Tecnología</item>
        <item>Social</item>
        <item>Entretenimiento</item>
        <item>Estilo de vida</item>
    </string-array>

    <string-array name="tipoPost">
        <item>Actualización</item>
        <item>Noticia</item>
        <item>Publicación</item>
        <item>Agradecimiento</item>
    </string-array>

</resources>