<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6634F5C5"
    tools:context=".SheepTypeScreen">

    <View
        android:id="@+id/header_sheepy"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:background="@drawable/background_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_sheepy"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/center_sheepy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_centershape"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description9" />

    <TextView
        android:id="@+id/title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/sheepy"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_sheepy" />

    <TextView
        android:id="@+id/description9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/lato"
        android:text="@string/haremos_que_el_crear_y_mejorar_al_mundo_sea_una_experiencia_nica_cu_ntanos_de_tu_proyecto"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title4" />

    <EditText
        android:id="@+id/projectName"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/nombre_del_proyecto"
        android:background="@drawable/background_selectable_input"
        android:drawableStart="@drawable/input_toggle_project"
        android:drawablePadding="12dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/nombre_del_proyecto"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/center_sheepy"
        app:layout_constraintStart_toStartOf="@+id/center_sheepy"
        app:layout_constraintTop_toTopOf="@+id/center_sheepy" />

    <EditText
        android:id="@+id/projectDescription"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/objetivo_del_proyecto"
        android:background="@drawable/background_selectable_input"
        android:drawableStart="@drawable/input_toggle_goal"
        android:drawablePadding="12dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/objetivo_del_proyecto"
        android:inputType="textLongMessage"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/center_sheepy"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/center_sheepy"
        app:layout_constraintTop_toBottomOf="@+id/projectName" />

    <EditText
        android:id="@+id/moneyGoal"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/meta_monetaria_en_usd"
        android:background="@drawable/background_selectable_input"
        android:drawableStart="@drawable/input_toggle_money"
        android:drawablePadding="12dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/meta_monetaria_en_usd"
        android:inputType="text|numberDecimal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/center_sheepy"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/center_sheepy"
        app:layout_constraintTop_toBottomOf="@+id/projectDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:elevation="5dp"
        android:hint="@string/categor_a"
        app:boxStrokeColor="@color/dark_blue"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="@+id/center_sheepy"
        app:layout_constraintStart_toStartOf="@+id/center_sheepy"
        app:layout_constraintTop_toBottomOf="@+id/moneyGoal"
        app:startIconDrawable="@drawable/icon_list_dark">

        <AutoCompleteTextView
            tools:ignore="LabelFor"
            android:id="@+id/auto_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/description10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato"
        android:textColor="@color/dark_blue"
        android:textSize="13sp"
        android:elevation="5dp"
        android:text="@string/zona_de_impacto"
        app:layout_constraintStart_toStartOf="@+id/center_sheepy"
        app:layout_constraintTop_toBottomOf="@+id/til_category" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/center_sheepy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/center_sheepy"
        app:layout_constraintTop_toBottomOf="@+id/description10" />

    <Button
        android:id="@+id/buttonSheepy"
        android:layout_width="0dp"
        android:layout_height="36dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_blue"
        android:elevation="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/continuar"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:backgroundTint="#2F455C"
        app:layout_constraintEnd_toEndOf="@+id/center_sheepy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/center_sheepy"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>