<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/postPicture"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/icon_profile"
                app:civ_border="false"
                app:civ_shadow="true"
                app:civ_shadow_radius="10dp"
                app:civ_shadow_color="@color/dark_blue"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/nameUser"
                    android:text="@string/nombre_de_usuario"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/dark_blue"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"/>
                <TextView
                    android:id="@+id/postType"
                    android:text="@string/tipo_de_post"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/dark_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"/>
                <TextView
                    android:id="@+id/time"
                    android:text="33 min"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/dark_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/icon_more"
                android:contentDescription="@string/desc" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imagePost"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:src="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/desc" />

        <TextView
            android:id="@+id/content"
            android:text="Aqui va el cuerpo del post"
            android:fontFamily="@font/lato"
            android:textColor="@color/dark_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/likes"
            android:text="1.2k likes"
            android:fontFamily="@font/lato"
            android:textColor="@color/dark_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableLeft="@drawable/icon_like"
                android:drawablePadding="12dp"
                android:fontFamily="@font/lato"
                android:text="@string/like"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/donarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donar"
                android:textSize="13sp"
                android:drawableLeft="@drawable/icon_donate"
                android:drawablePadding="20dp"
                android:fontFamily="@font/lato"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/compartirButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_share"
                android:drawablePadding="12dp"
                android:text="@string/compartir"
                android:fontFamily="@font/lato"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>