<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/userPicture"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/icon_profile"
        app:civ_border="false"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/dark_blue"
        app:civ_shadow_radius="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userPicture"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        android:layout_toStartOf="@id/followButton"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/nameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/nombre_de_usuario"
            android:textColor="@color/dark_blue"
            android:textSize="13sp"
            android:textStyle="bold"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/usertype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/usertype"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            android:maxLines="1" />

        <TextView
            android:id="@+id/status_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/status_project"
            android:textColor="@color/dark_blue"
            android:textSize="12sp"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/followButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/button_background"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/lato"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:visibility="gone" />
</RelativeLayout>